--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <a href="#contacts">Контакты</a>
         </nav>
         <div>
+            <div>
+                Наш e-mail:<a href="mailto:mail@mail.com">mail@mail.com</a>
+            </div>
             <a href="tel:+79267148385">+7 926 714 83 85</a>
             <button>Заказать звонок</button>
         </div>
